Add KnowWEUtils.getWikiLink util methods that properly generate the [label|article] string... replace manual link generations and some more cleanup